update AccordionItem style - add color inherit to the button to avoid default color on ios

--- a/styles/modules/AccordionItem.module.scss
+++ b/styles/modules/AccordionItem.module.scss
@@ -25,6 +25,7 @@
             justify-content: space-between;
             width: 100%;
             padding: 16px 20px;
+            color: inherit;
         	transition: all .35s $ease-in;
 
             svg {
